[metadata]
name = <Websurfer>
version = <version number: 0.1.0>
license = <MIT>
description = <Websurfer is a Python library for crawling websites for information.>
long_description = file: README.md
author = <Henri Remonen>
author_email = <henri@remonen.fi>
classifiers =

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =

[options.packages.find]
where=src